# Omnishield360

./: LICENSE  README.md
Omnishield360/: AUTHORS.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_MATRIX.md  DEVELOPER_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  MOCK_TESTING.md  Makefile  NOTICE  README.md  case_workers.py  main.py  mypy.ini  pyproject.toml  uipath.json
Omnishield360/case-models/: case-entity-schema.json  omnishield360-case-plan.json
Omnishield360/docs/: MAESTRO_CASE_BUILD_GUIDE.md  deployment.md  runbooks.md  security.md
Omnishield360/process-models/: mock.json  process-model.bpmn
Omnishield360/scripts/: run_uipath_pipeline.bat  start_deployment.bat  validate_deployment.py
Omnishield360/src/: __init__.py
Omnishield360/src/agents/: __init__.py  cob_engine.py  compliance.py  judge.py  medical_necessity.py  pcp_referral.py  pii_masker.py  streaming.py
Omnishield360/src/bots/: __init__.py  retry_utils.py
Omnishield360/src/case_management/: __init__.py  contracts.py
Omnishield360/src/integrations/: audit_client.py  ehr_client.py  notifications.py
Omnishield360/src/observability/: __init__.py  tracing.py
Omnishield360/src/testing/: run_tests.py  test-fixtures.json  test_core.py
Omnishield360/src/workflows/: routing.py  schemas.py
omnishield360/: DEPLOYMENT_MATRIX.md  DEVELOPER_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  MOCK_TESTING.md  README.md  main.py  pyproject.toml
omnishield360/docs/: DEPLOYMENT_RUNBOOK.md  deployment.md  runbooks.md  security.md
omnishield360/process-models/: mock.json  process-model.bpmn
omnishield360/scripts/: validate_deployment.py
omnishield360/src/agents/: cob_engine.py  compliance.py  deduplication.py  pcp_referral.py  pii_masker.py
omnishield360/src/bots/: ui_helpers.py
omnishield360/src/integrations/: __init__.py  audit_client.py  ehr_client.py  notifications.py
omnishield360/src/testing/: test-fixtures.json
omnishield360/src/workflows/: __init__.py  routing.py  schemas.py
