[project]
name = "omnishield360-coded-agent"
version = "1.0.0"
description = "OmniShield 360: Adaptive Payer-Provider Lifecycle & Anti-Litigation Governance Coded Agent"
authors = [{ name = "Genius", email = "genius@example.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "uipath>=2.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build-meta"

[tool.setuptools.packages.find]
where = ["."]
